--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -33,12 +33,13 @@ set(Octomap_LIBS octomap octomath)
 add_subdirectory(libraries)
 add_subdirectory(common)
 add_subdirectory(control)
-add_subdirectory(planning)
-# add_subdirectory(planning_v2)
+# add_subdirectory(planning)
+add_subdirectory(planning_v2)
 add_subdirectory(utility)
-add_subdirectory(vis)
-# add_subdirectory(fastplot)
-add_subdirectory(platforms/quadrotor)
+# add_subdirectory(vis)
+add_subdirectory(fastplot)
+add_subdirectory(platforms/generic_car)
+# add_subdirectory(platforms/quadrotor)
 # add_subdirectory(platforms/simulator)
 
 ## Add test source directories
