--- a/src/platforms/generic_car/field/tests/CMakeLists.txt
+++ b/src/platforms/generic_car/field/tests/CMakeLists.txt
@@ -10,7 +10,7 @@ add_executable(test_create_field test_create_field.cpp)
 target_link_libraries(test_create_field field)
 
 add_executable(test_road_field test_road_field.cpp)
-target_link_libraries(test_road_field field ${LCM_LIBRARIES}) 
+target_link_libraries(test_road_field field fastplot ${LCM_LIBRARIES}) 
 
 add_executable(test_vehicle_field test_vehicle_field.cpp)
-target_link_libraries(test_vehicle_field field ${LCM_LIBRARIES}) 
+target_link_libraries(test_vehicle_field field fastplot ${LCM_LIBRARIES}) 
