saved work on field

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -54,6 +54,7 @@
         "*.ipp": "cpp",
         "core": "cpp",
         "vector": "cpp",
-        "*.txx": "cpp"
+        "*.txx": "cpp",
+        "unordered_map": "cpp"
     }
 }
