new implementation of threat field

--- a/src/platforms/generic_car/CMakeLists.txt
+++ b/src/platforms/generic_car/CMakeLists.txt
@@ -42,7 +42,7 @@ include_directories(${LCM_GENERATED_HEADER_PATH})
 # add_subdirectory(expts)
 add_subdirectory(field)
 add_subdirectory(traffic)
-add_subdirectory(listening)
+# add_subdirectory(listening)
 
 
 
