--- a/src/platforms/generic_car/field/tests/CMakeLists.txt
+++ b/src/platforms/generic_car/field/tests/CMakeLists.txt
@@ -6,11 +6,20 @@ include_directories(${CMAKE_SOURCE_DIR}/src)
 #find_package(LIBRARY_NAME REQUIRED)
 
 ## tests
-add_executable(test_create_field test_create_field.cpp)
-target_link_libraries(test_create_field field)
+add_executable(test_scalar_field test_scalar_field.cpp)
+target_link_libraries(test_scalar_field field)
 
-add_executable(test_road_field test_road_field.cpp)
-target_link_libraries(test_road_field field fastplot ${LCM_LIBRARIES}) 
+add_executable(test_threat_basis test_threat_basis.cpp)
+target_link_libraries(test_threat_basis field fastplot utility)
 
-add_executable(test_vehicle_field test_vehicle_field.cpp)
-target_link_libraries(test_vehicle_field field fastplot ${LCM_LIBRARIES}) 
+add_executable(test_collision_field test_collision_field.cpp)
+target_link_libraries(test_collision_field field fastplot utility)
+
+# add_executable(test_create_field test_create_field.cpp)
+# target_link_libraries(test_create_field field)
+
+# add_executable(test_road_field test_road_field.cpp)
+# target_link_libraries(test_road_field field fastplot ${LCM_LIBRARIES}) 
+
+# add_executable(test_vehicle_field test_vehicle_field.cpp)
+# target_link_libraries(test_vehicle_field field fastplot ${LCM_LIBRARIES}) 
