--- a/src/platforms/generic_car/field/CMakeLists.txt
+++ b/src/platforms/generic_car/field/CMakeLists.txt
@@ -9,13 +9,10 @@ set(FIELD_LIB_SRC
     src/scalar_field.cpp
     src/threat_basis.cpp
     src/threat_distribution.cpp
-    # src/road_field.cpp
-    # src/vehicle_field.cpp
     src/collision_field.cpp
-    # src/field_utils.cpp
 )
 add_library(field STATIC ${FIELD_LIB_SRC})
-target_link_libraries(field common)
+# target_link_libraries(field common)
 target_include_directories(field PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/inc>
     $<INSTALL_INTERFACE:include>
