implemented new vrep interface for humming bird sim

--- a/src/platforms/simulator/CMakeLists.txt
+++ b/src/platforms/simulator/CMakeLists.txt
@@ -42,7 +42,7 @@ set(LCM_GENERATED_HEADER_PATH ${CMAKE_BINARY_DIR}/include)
 include_directories(${LCM_GENERATED_HEADER_PATH})
 
 ## Add sub source directories
-# add_subdirectory(apps)
+add_subdirectory(apps)
 add_subdirectory(sim_interface)
 add_subdirectory(quad_hbird_sim)
 # add_subdirectory(quad_solo_sim)
