--- a/src/planning_v2/CMakeLists.txt
+++ b/src/planning_v2/CMakeLists.txt
@@ -37,10 +37,22 @@ endif(LCM_NOT_FOUND)
 set(LCM_GENERATED_HEADER_PATH ${CMAKE_BINARY_DIR}/include)
 include_directories(${LCM_GENERATED_HEADER_PATH})
 
+## Find Gurobi
+find_package(GUROBI QUIET)
+if (NOT GUROBI_FOUND)
+  message("-- Gurobi not found. Trajectory generation will not be built. Make sure you have set the GUROBI_HOME variable")
+else()
+  message("-- Gurobi found")
+  include_directories(${GUROBI_INCLUDE_DIRS})
+endif()
+
 ## Add other sub source directories
 add_subdirectory(libgraph)
 add_subdirectory(demo)
 add_subdirectory(geometry)
 add_subdirectory(planner)
 add_subdirectory(map)
+if (GUROBI_FOUND)
+add_subdirectory(polyopt)
+endif()
 
