--- a/src/platforms/simulator/quad_solo_sim/CMakeLists.txt
+++ b/src/platforms/simulator/quad_solo_sim/CMakeLists.txt
@@ -6,11 +6,15 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 # Add libraries
 set(QUADSIM_LIB_SRC
-    quad_solo_sim_client.cpp
-    quad_solo_sim_control.cpp
+    src/quad_solo_sim_client.cpp
+    src/quad_solo_sim_control.cpp
 )
-add_library(quadsolosim STATIC ${QUADSIM_LIB_SRC})
-target_link_libraries(quadsolosim vrep_sim quad_ctrl quad_base ${LCM_LIBRARIES})
+add_library(quad_sim_solo STATIC ${QUADSIM_LIB_SRC})
+target_link_libraries(quad_sim_solo sim_interface common quad_ctrl quad_sys ${LCM_LIBRARIES})
+target_include_directories(quad_sim_solo PUBLIC
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+  $<INSTALL_INTERFACE:include>
+  PRIVATE src)
 
 # Add executables
 #add_executable(quadsim_demo quadsim_demo.cpp)
