--- a/src/interface/CMakeLists.txt
+++ b/src/interface/CMakeLists.txt
@@ -4,5 +4,5 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 # Add libraries
 add_library(librav_if INTERFACE)
 target_include_directories(librav_if INTERFACE
-	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/inc>
+	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
 	$<INSTALL_INTERFACE:include>)
