--- a/src/planning_v2/geometry/CMakeLists.txt
+++ b/src/planning_v2/geometry/CMakeLists.txt
@@ -20,7 +20,7 @@ set(GEOMETRY_LIB_SRC
 add_library(geometry STATIC ${GEOMETRY_LIB_SRC})
 target_link_libraries(geometry common)
 target_include_directories(geometry PUBLIC
-  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/inc>
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:include>
   PRIVATE src)
 
