--- a/src/planning_v2/polyopt/CMakeLists.txt
+++ b/src/planning_v2/polyopt/CMakeLists.txt
@@ -10,7 +10,7 @@ set(POLYOPT_LIB_SRC
 add_library(polyopt STATIC ${POLYOPT_LIB_SRC})
 target_link_libraries(polyopt common ${GUROBI_LIBRARIES})
 target_include_directories(polyopt PUBLIC
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/inc>
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     $<INSTALL_INTERFACE:include>
     PRIVATE src)
 
