--- a/src/platforms/generic_car/traffic/CMakeLists.txt
+++ b/src/platforms/generic_car/traffic/CMakeLists.txt
@@ -13,7 +13,7 @@ set(TRAFFIC_LIB_SRC
 add_library(traffic STATIC ${TRAFFIC_LIB_SRC})
 target_link_libraries(traffic common utility)
 target_include_directories(traffic PUBLIC
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/inc>
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     $<INSTALL_INTERFACE:include>
     PRIVATE src)
 
