--- a/src/planning_v2/planner/CMakeLists.txt
+++ b/src/planning_v2/planner/CMakeLists.txt
@@ -12,7 +12,7 @@ set(GEOMETRY_LIB_SRC
 add_library(planner STATIC ${GEOMETRY_LIB_SRC})
 target_link_libraries(planner graph geometry)
 target_include_directories(planner PUBLIC
-  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/inc>
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:include>
   PRIVATE src)
 
