updated simulator for rc car

--- a/src/platforms/generic_car/field/tests/CMakeLists.txt
+++ b/src/platforms/generic_car/field/tests/CMakeLists.txt
@@ -10,13 +10,13 @@ add_executable(test_scalar_field test_scalar_field.cpp)
 target_link_libraries(test_scalar_field field)
 
 add_executable(test_threat_basis test_threat_basis.cpp)
-target_link_libraries(test_threat_basis field fastplot utility)
+target_link_libraries(test_threat_basis field fastplot utilities)
 
 add_executable(test_collision_field test_collision_field.cpp)
-target_link_libraries(test_collision_field field fastplot utility)
+target_link_libraries(test_collision_field field fastplot utilities)
 
 add_executable(test_coeff_est test_coeff_est.cpp)
-target_link_libraries(test_coeff_est field fastplot utility)
+target_link_libraries(test_coeff_est field fastplot utilities)
 
 # add_executable(test_create_field test_create_field.cpp)
 # target_link_libraries(test_create_field field)
