--- a/src/platforms/generic_car/navigation/tests/CMakeLists.txt
+++ b/src/platforms/generic_car/navigation/tests/CMakeLists.txt
@@ -8,7 +8,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 # Add executables
 add_executable(test_vfield_sim test_vehiclefield_sim.cpp)
-target_link_libraries(test_vfield_sim field traffic utility fastplot ${LCM_LIBRARIES})
+target_link_libraries(test_vfield_sim field traffic utilities fastplot ${LCM_LIBRARIES})
 
 add_executable(test_cfield_sim test_collifield_sim.cpp)
-target_link_libraries(test_cfield_sim field traffic utility fastplot ${LCM_LIBRARIES})
+target_link_libraries(test_cfield_sim field traffic utilities fastplot ${LCM_LIBRARIES})
