--- a/src/platforms/quadrotor/control/CMakeLists.txt
+++ b/src/platforms/quadrotor/control/CMakeLists.txt
@@ -17,7 +17,7 @@ set(QUADCON_LIB_SRC
     src/quad_mixer.cpp    
 )
 add_library(quad_ctrl STATIC ${QUADCON_LIB_SRC})
-target_link_libraries(quad_ctrl librav_if common utility ${LCM_LIBRARIES})
+target_link_libraries(quad_ctrl librav_if common utilities ${LCM_LIBRARIES})
 target_include_directories(quad_ctrl PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:include>
