--- a/src/platforms/simulator/CMakeLists.txt
+++ b/src/platforms/simulator/CMakeLists.txt
@@ -46,4 +46,4 @@ add_subdirectory(apps)
 add_subdirectory(sim_interface)
 add_subdirectory(quad_hbird_sim)
 # add_subdirectory(quad_solo_sim)
-# add_subdirectory(rc_car_sim)
+add_subdirectory(rc_car_sim)
