--- a/src/platforms/simulator/apps/CMakeLists.txt
+++ b/src/platforms/simulator/apps/CMakeLists.txt
@@ -5,8 +5,8 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 add_executable(quadsim_hbird_demo quadsim_hbird_demo.cpp)
 target_link_libraries(quadsim_hbird_demo quad_sim)
 
-#add_executable(rc_car_sim_demo rc_car_sim_demo.cpp)
-#target_link_libraries(rc_car_sim_demo rccarsim car_ctrl)
+add_executable(rc_car_sim_demo rc_car_sim_demo.cpp)
+target_link_libraries(rc_car_sim_demo rccar_sim)
 
 #add_executable(rc_car_sim_control rc_car_sim_control.cpp)
 #target_link_libraries(rc_car_sim_control rccarsim car_ctrl)
