--- a/src/platforms/generic_car/expts/CMakeLists.txt
+++ b/src/platforms/generic_car/expts/CMakeLists.txt
@@ -8,7 +8,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 # Add executables
 add_executable(expt_static_field static_field.cpp)
-target_link_libraries(expt_static_field field traffic utility fastplot ${LCM_LIBRARIES})
+target_link_libraries(expt_static_field field traffic utilities fastplot ${LCM_LIBRARIES})
 
 add_executable(static_field_animation static_field_animation.cpp)
-target_link_libraries(static_field_animation field traffic utility fastplot ${LCM_LIBRARIES})
+target_link_libraries(static_field_animation field traffic utilities fastplot ${LCM_LIBRARIES})
