--- a/src/platforms/quadrotor/path_repair/CMakeLists.txt
+++ b/src/platforms/quadrotor/path_repair/CMakeLists.txt
@@ -18,7 +18,7 @@ if (GUROBI_FOUND)
         geo_mark_graph.cpp    
     )
     add_library(path_repair STATIC ${PATH_REPAIR_LIB_SRC} ${PATH_REPAIR_COMMON_SRC})
-    target_link_libraries(path_repair map geometry quad_base polyopt common vis utility ${LCM_LIBRARIES})
+    target_link_libraries(path_repair map geometry quad_base polyopt common vis utilities ${LCM_LIBRARIES})
 endif()
 
 set(PATH_REPAIR_SIM_SRC
@@ -27,7 +27,7 @@ set(PATH_REPAIR_SIM_SRC
     sim/sim_depth_sensor.cpp
 )
 add_library(pr_sim STATIC ${PATH_REPAIR_SIM_SRC} ${PATH_REPAIR_COMMON_SRC})
-target_link_libraries(pr_sim utility map geometry vis ${LCM_LIBRARIES})
+target_link_libraries(pr_sim utilities map geometry vis ${LCM_LIBRARIES})
 
 # Add executables
 
