--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -40,7 +40,7 @@ if(ENABLE_LOGGING)
 	target_link_libraries(common -lpthread)
 endif(ENABLE_LOGGING)
 target_include_directories(common PUBLIC
-	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/inc>
+	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
 	$<INSTALL_INTERFACE:include>
 	PRIVATE src)
 
