--- a/src/platforms/quadrotor/system/CMakeLists.txt
+++ b/src/platforms/quadrotor/system/CMakeLists.txt
@@ -9,7 +9,7 @@ find_package(GUROBI QUIET)
 if (NOT GUROBI_FOUND)
   message("-- Gurobi not found. Trajectory generation will not be built. Make sure you have set the GUROBI_HOME variable")
 else()
-  message("-- Gurobi found")
+  # message("-- Gurobi found")
   include_directories(${GUROBI_INCLUDE_DIRS})
 endif()
 
