--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -20,14 +20,8 @@ else(ENABLE_LOGGING)
 	message( "-- Enable logging with spdlog -- No" )
 endif(ENABLE_LOGGING)
 
-## Config common include directories
-# include_directories(${CMAKE_SOURCE_DIR})
-# include_directories(${CMAKE_SOURCE_DIR}/libraries/)
-# include_directories(${CMAKE_SOURCE_DIR}/libraries/octomap-1.8.0/octomap/include)
-# set(Octomap_LIBS octomap octomath)
-
 ## Add sub source directories
-# add_subdirectory(examples)
+add_subdirectory(examples)
 add_subdirectory(common)
 add_subdirectory(planning)
 add_subdirectory(fastplot)
@@ -36,8 +30,8 @@ add_subdirectory(utilities)
 add_subdirectory(libraries)
 
 add_subdirectory(platforms/generic_car)
-# add_subdirectory(platforms/quadrotor)
-# add_subdirectory(platforms/simulator)
+add_subdirectory(platforms/quadrotor)
+add_subdirectory(platforms/simulator)
 
 ## Add test source directories
 if(BUILD_TESTS)
