search in threat field works

--- a/src/platforms/generic_car/CMakeLists.txt
+++ b/src/platforms/generic_car/CMakeLists.txt
@@ -41,6 +41,7 @@ include_directories(${LCM_GENERATED_HEADER_PATH})
 # add_subdirectory(apps)
 # add_subdirectory(expts)
 add_subdirectory(field)
+add_subdirectory(navigation)
 add_subdirectory(traffic)
 add_subdirectory(scenario)
 # add_subdirectory(listening)
