--- a/src/platforms/generic_car/CMakeLists.txt
+++ b/src/platforms/generic_car/CMakeLists.txt
@@ -39,12 +39,11 @@ include_directories(${LCM_GENERATED_HEADER_PATH})
 
 ## Add other sub source directories
 # add_subdirectory(apps)
-# add_subdirectory(expts)
+add_subdirectory(expts)
 add_subdirectory(field)
 add_subdirectory(navigation)
-add_subdirectory(traffic)
+# add_subdirectory(traffic)
 add_subdirectory(scenario)
-# add_subdirectory(listening)
 
 
 
