--- a/src/platforms/generic_car/expts/CMakeLists.txt
+++ b/src/platforms/generic_car/expts/CMakeLists.txt
@@ -15,3 +15,6 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 add_executable(search_collision_field search_collision_field.cpp)
 target_link_libraries(search_collision_field nav field fastplot utilities)
+
+add_executable(search_collision_field2 search_collision_field2.cpp)
+target_link_libraries(search_collision_field2 nav field fastplot utilities)
