added wrapper for mathgl_glut

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,6 +55,7 @@
         "core": "cpp",
         "vector": "cpp",
         "*.txx": "cpp",
-        "unordered_map": "cpp"
+        "unordered_map": "cpp",
+        "dense": "cpp"
     }
 }
