--- a/src/fastplot/CMakeLists.txt
+++ b/src/fastplot/CMakeLists.txt
@@ -54,6 +54,8 @@ set(FASTPLOT_LIB_SRC
 	src/graph_plot.cpp
 	src/plot_utils.cpp
 	src/mathgl_plot.cpp
+	src/mathgl_utils.cpp
+	src/mathgl_surf.cpp
 )
 
 if(VTK_FOUND AND EIGEN3_FOUND)
