--- a/src/fastplot/tests/CMakeLists.txt
+++ b/src/fastplot/tests/CMakeLists.txt
@@ -39,15 +39,6 @@ target_link_libraries(test_mathgl_surf fastplot)
 add_executable(test_mathgl_2d test_mathgl_2d.cpp )
 target_link_libraries(test_mathgl_2d fastplot)
 
-find_package(Cairo REQUIRED)
-include_directories(${CAIRO_INCLUDE_DIRS})
-
-find_package(X11 REQUIRED)
-include_directories(${X11_INCLUDE_DIR})
-
-add_executable(test_cairo test_cairo.cpp )
-target_link_libraries(test_cairo ${CAIRO_LIBRARIES} ${X11_LIBRARIES})
-
 # find_package(DISLIN REQUIRED GLUT)
 # include_directories(${DISLIN_INCLUDE_DIRS})
 
@@ -67,3 +58,6 @@ target_link_libraries(test_cairo ${CAIRO_LIBRARIES} ${X11_LIBRARIES})
 # include_directories(${Boost_INCLUDE_DIRS})
 # add_executable(matplot_example matplot/examples.cpp matplot/matplot.cpp matplot/matplot.h matplot/mtl4_dims.h)
 # target_link_libraries(matplot_example ${VTK_LIBRARIES} )
+
+add_subdirectory(fltk)
+add_subdirectory(cairo)
