--- a/src/planning/CMakeLists.txt
+++ b/src/planning/CMakeLists.txt
@@ -50,7 +50,9 @@ endif()
 add_subdirectory(libgraph)
 add_subdirectory(geometry)
 add_subdirectory(planner)
+add_subdirectory(field)
 add_subdirectory(behavior)
+add_subdirectory(reachability)
 add_subdirectory(map)
 if (GUROBI_FOUND)
 add_subdirectory(polyopt)
