--- a/src/libraries/CMakeLists.txt
+++ b/src/libraries/CMakeLists.txt
@@ -25,5 +25,6 @@ set(ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 add_subdirectory(octomap-1.8.0)
 add_subdirectory(googletest)
 add_subdirectory(spdlog)
+add_subdirectory(ascent)
 add_subdirectory(dubins_curves)
 
