saved work on reachable set

--- a/src/libraries/CMakeLists.txt
+++ b/src/libraries/CMakeLists.txt
@@ -27,4 +27,5 @@ add_subdirectory(googletest)
 add_subdirectory(spdlog)
 add_subdirectory(ascent)
 add_subdirectory(dubins_curves)
+add_subdirectory(dlib-19.10)
 
