updated graph, some test with glfw

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -25,6 +25,7 @@ add_subdirectory(examples)
 add_subdirectory(common)
 add_subdirectory(planning)
 add_subdirectory(fastplot)
+add_subdirectory(lightviz)
 add_subdirectory(interface)
 add_subdirectory(utilities)
 add_subdirectory(libraries)
